adding default movements and fish food

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <canvas id="canvas" width="800" height="600"></canvas>
     <script type="text/javascript" src="./src/fish.js"></script>
+    <script type="text/javascript" src="./src/fishfood.js"></script>
     <script type="text/javascript" src="./src/player.js"></script>
     <script type="text/javascript" src="./src/game.js"></script>
     <script type="text/javascript" src="./src/index.js"></script>
