changing images, adjusting rendering depending on direction,  adding eating rendering, adding spaceKey eating rendering

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
     
             <script type="text/javascript" src="./src/fish.js"></script>
+            <script type="text/javascript" src="./src/jellyfish.js"></script>
             <script type="text/javascript" src="./src/orca.js"></script>
             <script type="text/javascript" src="./src/enemy.js"></script>
             <script type="text/javascript" src="./src/player.js"></script>
