--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                         <div id="progress-bar"></div>
                     </div>
                     <canvas id="canvas" width="1000" height="700"></canvas>
-                    <div id="bonus-area">
-                        <div id="bonusses"></div>
+                    <div id="strength-area">
+                        <div id="strength"></div>
                     </div>
                 </main>
             </div>
