adding random change direction for X axis, changing orca to shark, adjusting collisions

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     
             <script type="text/javascript" src="./src/fish.js"></script>
             <script type="text/javascript" src="./src/jellyfish.js"></script>
-            <script type="text/javascript" src="./src/orca.js"></script>
+            <script type="text/javascript" src="./src/entranceAlert.js"></script>
             <script type="text/javascript" src="./src/enemy.js"></script>
+            <script type="text/javascript" src="./src/shark.js"></script>
             <script type="text/javascript" src="./src/player.js"></script>
             <script type="text/javascript" src="./src/fishfood.js"></script>
             <script type="text/javascript" src="./src/background.js"></script>
