adding welcoming page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
                     <h1>The Fish Game</h1>
                 </header>
                 <main>
+                    <div id="welcoming-page">
+                        <h3>The game description will go here:</h3>
+                        <p>Lorem ipsum dolor sit amet, vix ei solum dolore reformidans, no eum numquam vocibus, has suavitate gloriatur in. Dicit altera postea eos no, reque dicta causae vix cu, populo platonem tractatos an sed. Te pro dicat velit, eam et audire voluptaria, usu appetere vituperatoribus et. Tantas commune lucilius te quo.</p>
+                        <p>/p>Diam dolore senserit in sea. Ea nibh falli mea, no virtute dolorem dissentias sed, qui at wisi minimum. Rebum sententiae ut qui, nisl laoreet apeirian pri eu. In mea suas pertinax voluptatum, mea ad nihil civibus. Nec regione comprehensam ut, in vidisse referrentur duo, nam dolore incorrupte an. Quo at altera molestie suscipiantur, nam in meis evertitur adipiscing.</p>
+                        <p>Lorem ipsum dolor sit amet, vix ei solum dolore reformidans, no eum numquam vocibus, has suavitate gloriatur in. Dicit altera postea eos no, reque dicta causae vix cu, populo platonem tractatos an sed. Te pro dicat velit, eam et audire voluptaria, usu appetere vituperatoribus et. Tantas commune lucilius te quo.</p>
+                        <p>/p>Diam dolore senserit in sea. Ea nibh falli mea, no virtute dolorem dissentias sed, qui at wisi minimum. Rebum sententiae ut qui, nisl laoreet apeirian pri eu. In mea suas pertinax voluptatum, mea ad nihil civibus. Nec regione comprehensam ut, in vidisse referrentur duo, nam dolore incorrupte an. Quo at altera molestie suscipiantur, nam in meis evertitur adipiscing.</p>
+                        <button id="start-btn">Start</button>
+                    </div>
                     <div id="energy-area">
                         <div id="progress-bar"></div>
                     </div>
