--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" type="text/css" href="./styles/styles.css" media="screen" />
-        <title>The Fish Game</title>
+        <title>Shark attack</title>
     </head>
     <body>
             <div class="container">
                 <header>
-                    <h1>The Fish Game</h1>
+                    <h1>Shark attack</h1>
+                    <div id="level">Level: <div id="level-number"></div></div>
                 </header>
+                
+                <!-- <div id="button-area"> 
+                    <button id="play-again-btn">Play again</button>
+                    <button id="continue-btn">Continue</button>
+                </div> -->
                 <main>
-                    <div id="welcoming-page">
-                        <h3>The game description will go here:</h3>
-                        <p>Lorem ipsum dolor sit amet, vix ei solum dolore reformidans, no eum numquam vocibus, has suavitate gloriatur in. Dicit altera postea eos no, reque dicta causae vix cu, populo platonem tractatos an sed. Te pro dicat velit, eam et audire voluptaria, usu appetere vituperatoribus et. Tantas commune lucilius te quo.</p>
-                        <p>/p>Diam dolore senserit in sea. Ea nibh falli mea, no virtute dolorem dissentias sed, qui at wisi minimum. Rebum sententiae ut qui, nisl laoreet apeirian pri eu. In mea suas pertinax voluptatum, mea ad nihil civibus. Nec regione comprehensam ut, in vidisse referrentur duo, nam dolore incorrupte an. Quo at altera molestie suscipiantur, nam in meis evertitur adipiscing.</p>
-                        <p>Lorem ipsum dolor sit amet, vix ei solum dolore reformidans, no eum numquam vocibus, has suavitate gloriatur in. Dicit altera postea eos no, reque dicta causae vix cu, populo platonem tractatos an sed. Te pro dicat velit, eam et audire voluptaria, usu appetere vituperatoribus et. Tantas commune lucilius te quo.</p>
-                        <p>/p>Diam dolore senserit in sea. Ea nibh falli mea, no virtute dolorem dissentias sed, qui at wisi minimum. Rebum sententiae ut qui, nisl laoreet apeirian pri eu. In mea suas pertinax voluptatum, mea ad nihil civibus. Nec regione comprehensam ut, in vidisse referrentur duo, nam dolore incorrupte an. Quo at altera molestie suscipiantur, nam in meis evertitur adipiscing.</p>
+                   <!--  <div id="welcoming-page">
+                        <p>Your goal is to eat the shark, but in order to be able to win you need to become bigger and stronger.</p>
+                        <p>Eat as much fish as you can to grow and pay attention, piranhas can eat you and jellyfish will make you weaker.</p>
+                        <p>When the image border turns red, you are big and strong enough to attempt your attack.</p>
                         <button id="start-btn">Start</button>
-                    </div>
+                    </div> -->
+                    <div class="vertical-text"><div id="energy-text">Energy</div></div>
                     <div id="energy-area">
                         <div id="progress-bar"></div>
                     </div>
@@ -28,6 +33,7 @@
                     <div id="strength-area">
                         <div id="strength"></div>
                     </div>
+                    <div class="vertical-text"><div id="strength-text">Strength</div></div>
                 </main>
             </div>
     
