adjusting collisions, correcting movements, add reset by reload function

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                     <div id="level">Level: <div id="level-number"></div></div>
                 </header>
                 
-                <!-- <div id="button-area"> 
+                <div id="button-area"> 
                     <button id="play-again-btn">Play again</button>
-                    <button id="continue-btn">Continue</button>
-                </div> -->
+                    <!-- <button id="continue-btn">Continue</button> -->
+                </div>
                 <main>
                    <!--  <div id="welcoming-page">
                         <p>Your goal is to eat the shark, but in order to be able to win you need to become bigger and stronger.</p>
