player now bouncing off the canvas, class Enemy no more extension of Fish, adjusting movements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 
                 <div id="button-area"> 
                     <button id="play-again-btn">Play again</button>
-                    <!-- <button id="continue-btn">Continue</button> -->
+                    <button id="continue-btn">Continue</button>
                 </div>
                 <main>
                    <!--  <div id="welcoming-page">
