adding images and styles to welcoming page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,48 @@
                     <button id="continue-btn">Continue</button>
                 </div>
                 <main>
-                   <!--  <div id="welcoming-page">
-                        <p>Your goal is to eat the shark, but in order to be able to win you need to become bigger and stronger.</p>
-                        <p>Eat as much fish as you can to grow and pay attention, piranhas can eat you and jellyfish will make you weaker.</p>
-                        <p>When the image border turns red, you are big and strong enough to attempt your attack.</p>
-                        <button id="start-btn">Start</button>
-                    </div> -->
+                    <div id="welcoming-page">
+                        <div id="welcoming-page-container">
+                            <h2>GOAL</h2> 
+                            <img src="./images/startPage-player.png" alt="main character">
+                            <p>this is you and you will need to fight the shark</p>
+                            <img src="./images/startPage-shark.png" alt="main character">  
+                            </br>
+                            <p>However, you can only win if you are big and strong enough!</p>
+                            <h2>HINTS</h2> 
+                            <div id="hint-list">
+                                <ul> Eat as much:
+                                    <li>
+                                        <img src="./images/startPage-fish2.png" alt="main character">
+                                        <p>multicolor fish to grow,</p>
+                                    </li>
+                                    <li>
+                                        <img src="./images/startPage-yellowFood.png" alt="main character">
+                                        <p>yellow food to become stronger</p>
+                                    </li>
+                                </ul> 
+                                <ul> and be careful:
+                                    <li>
+                                        <img src="./images/startPage-redFood.png" alt="main character">
+                                        <p>bad red food makes you weaker,</p>
+                                    </li>
+                                    <li>
+                                        <img src="./images/startPage-jellyfish.png" alt="main character">
+                                        <p>jellyfish make you smaller,</p>
+                                    </li>
+                                    <li>
+                                        <img src="./images/startPage-piranha.png" alt="main character">
+                                        <p>piranhas will kill you!</p>
+                                    </li>
+                                </ul>  
+                            </div>
+                            <p> When you are big and strong enough the image border turns red and you can attempt to attack the shark!</p>
+                            <img id="canvas-preview" src="./images/startPage-redBorder.png" alt="main character">
+                            <p>Good luck!</p>                    
+                            </br>
+                            <button id="start-btn">Start</button>
+                        </div>
+                    </div>
                     <div class="vertical-text"><div id="energy-text">Energy</div></div>
                     <div id="energy-area">
                         <div id="progress-bar"></div>
