add arrow key instruction

--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
                                     </li>
                                 </ul>  
                             </div>
-                            <p> When you are big and strong enough the image border turns red and you can attempt to attack the shark!</p>
+                            <p> When you are big and strong enough the image border turns red and you can attempt your shark attack!</p>
+                            </br>
+                            <p>Remember to face the shark when attacking.</p>
                             <img id="canvas-preview" src="./images/startPage-redBorder.png" alt="main character">
-                            <p>Good luck!</p>                    
+                            <p>Use the arrow keys &larr;, &uarr;, &rarr; and &darr; to move around.</p> 
+                            <p>Good luck!</p> 
                             </br>
                             <button id="start-btn">Start</button>
                         </div>
