fixing clearing of elements outside of canvas and adding help button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <header>
                     <h1>Shark attack</h1>
                     <div id="level">Level: <div id="level-number"></div></div>
+                    <button id="help">help</button>
                 </header>
                 
                 <div id="button-area"> 
