adding got-it-button and changing start-button

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                             <p>Use the arrow keys &larr;, &uarr;, &rarr; and &darr; to move around.</p> 
                             <p>Good luck!</p> 
                             </br>
-                            <button id="start-btn">Start</button>
+                            <button id="gotIt-btn">Got it!</button>
                         </div>
                     </div>
+                    <button id="start-btn">Start</button>
                     <div class="vertical-text"><div id="energy-text">Energy</div></div>
                     <div id="energy-area">
                         <div id="progress-bar"></div>
@@ -75,7 +76,6 @@
                     <div class="vertical-text"><div id="strength-text">Strength</div></div>
                 </main>
             </div>
-    
             <script type="text/javascript" src="./src/fish.js"></script>
             <script type="text/javascript" src="./src/jellyfish.js"></script>
             <script type="text/javascript" src="./src/enemy.js"></script>
